Adding pages and updating navigation.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Puma</title>
 </head>
 <body>
-    <header><h1>My first Website, Christian Durham</h1></header>
+    <header>
+        <h1>Our Puma Vacation website</h1>
+    </header>
+
+    <section>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+               <li><a href="./table.html">Table</a></li>
+               <li><a href="./about.html">About</a></li>
+            </ul>
+        </nav>
+    </section>
+
+    <footer>
+        <p>Copyright &copy;, 2026 Christian Durham</p>
+    </footer>
 </body>
 </html>
