--- a/about.html
+++ b/about.html
@@ -9,5 +9,47 @@
     <header>
         <h1>The About Page</h1>
     </header>
+    <section>
+        <form method="post" action="https://webdevbasics.net/scripts/demo.php">
+            <div>
+                <label for="myName">Name:</label>
+                <input type="text" name="myName" id="myName">
+            </div>
+            <div>
+                <label for="myEmail">Email</label>
+                <input type="text" name="myEmail" id="myEmail">
+            </div>
+            Choose your browsers you use<br>
+            <div>
+                <input type="checkbox" name="go" id="go" value="yes">
+                <label for="go">Google Chrome</label>
+            </div>
+                   <div>
+                <input type="checkbox" name="firefox" id="firefox" value="yes">
+                <label for="Firefox">Firefox</label>
+            </div>
+                   <div>
+                <input type="checkbox" name="Edge" id="Edge" value="yes">
+                <label for="Edge">Microsoft Edge</label>
+            </div>
+            Would you like to be on our mailing list?<br>
+            <div>
+                <div>
+                    <input type="radio" name="mailinglist" id="mailinglist" value="yes">
+                    <label for="mailinglistyes">Yes</label>
+                </div>
+                <div>
+                     <input type="radio" name="mailinglist" id="mailinglist" value="No">
+                    <label for="mailinglistno">No</label>
+                </div>
+            </div>
+            <div>
+                <span>Comments:</span>
+                <textarea></textarea>
+            </div>
+            <input type="submit" value="Submit">
+            <input type="reset" value="Redo">
+        </form>
+    </section>
 </body>
 </html>
