--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
                <li><a href="./about.html">About</a></li>
             </ul>
         </nav>
+        <video width="320" height="248" controls>
+            <source src="myMovie.mp4" type="video/mp4">
+            [Your browser does not support the video element]
+        </video>
+    
+        <audio controls>
+            <source src="mySound.mp3" type="audio/mpeg">
+            [Your browser does not support the audio element]
+        </audio>
     </section>
 
     <footer>
