--- a/about.html
+++ b/about.html
@@ -4,52 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <h1>The About Page</h1>
-    </header>
-    <section>
-        <form method="post" action="https://webdevbasics.net/scripts/demo.php">
-            <div>
-                <label for="myName">Name:</label>
-                <input type="text" name="myName" id="myName">
-            </div>
-            <div>
-                <label for="myEmail">Email</label>
-                <input type="text" name="myEmail" id="myEmail">
-            </div>
-            Choose your browsers you use<br>
-            <div>
-                <input type="checkbox" name="go" id="go" value="yes">
-                <label for="go">Google Chrome</label>
-            </div>
-                   <div>
-                <input type="checkbox" name="firefox" id="firefox" value="yes">
-                <label for="Firefox">Firefox</label>
-            </div>
-                   <div>
-                <input type="checkbox" name="Edge" id="Edge" value="yes">
-                <label for="Edge">Microsoft Edge</label>
-            </div>
-            Would you like to be on our mailing list?<br>
-            <div>
-                <div>
-                    <input type="radio" name="mailinglist" id="mailinglist" value="yes">
-                    <label for="mailinglistyes">Yes</label>
+    <div class="container">
+        <header>
+            <h1>The About Page</h1>
+        </header>
+        <section>
+            <form method="post" action="https://webdevbasics.net/scripts/demo.php">
+                <div class="mb-3">
+                    <label for="myName" class="form-label">Name:</label>
+                    <input type="text" name="myName" id="myName" class="form-control">
                 </div>
-                <div>
-                     <input type="radio" name="mailinglist" id="mailinglist" value="No">
-                    <label for="mailinglistno">No</label>
+                <div class="mb-3">
+                    <label for="myEmail"  class="form-label">Email</label>
+                    <input type="text" name="myEmail" id="myEmail" class="form-control">
                 </div>
-            </div>
-            <div>
-                <span>Comments:</span>
-                <textarea></textarea>
-            </div>
-            <input type="submit" value="Submit">
-            <input type="reset" value="Redo">
-        </form>
-    </section>
+                Choose your browsers you use<br>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" name="go" id="go" value="yes" class="form-check-input">
+                    <label for="go" class="form-check-label">Google Chrome</label>
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" name="firefox" id="firefox" value="yes" class="form-check-input">
+                    <label for="Firefox" class="form-check-label">Firefox</label>
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" name="Edge" id="Edge" value="yes" class="form-check-input">
+                    <label for="Edge" class="form-check-label">Microsoft Edge</label>
+                </div>
+                Would you like to be on our mailing list?<br>
+                <div class="mb-3">
+                    <div class="form-check">
+                        <input type="radio" name="mailinglist" id="mailinglist" value="yes" class="form-check-input">
+                        <label for="mailinglistyes" class="form-check-label">Yes</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="mailinglist" id="mailinglist" value="No" class="form-check-input">
+                        <label for="mailinglistno" class="form-check-label">No</label>
+                    </div>
+                </div>
+                <div class="mb-3 input-group">
+                    <span class="input-group-text">Comments:</span>
+                    <textarea class="form-control" aria-label="Your Comments"></textarea>
+                </div>
+                <input type="submit" value="Submit" class="btn btn-primary">
+                <input type="reset" value="Redo" class="btn btn-secondary">
+            </form>
+        </section>
+    </div>
 </body>
 </html>
