--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <header>
             <h1>The About Page</h1>
         </header>
-        <section>
+        <main>
             <form method="post" action="https://webdevbasics.net/scripts/demo.php">
                 <div class="mb-3">
                     <label for="myName" class="form-label">Name:</label>
@@ -53,7 +53,7 @@
                 <input type="submit" value="Submit" class="btn btn-primary">
                 <input type="reset" value="Redo" class="btn btn-secondary">
             </form>
-        </section>
+        </main>
     </div>
 </body>
 </html>
