--- a/table.html
+++ b/table.html
@@ -12,7 +12,7 @@
         <header>
             <h1>My Table Page</h1>
         </header>
-        <section>
+        <main>
             <table class="table table-striped">
                 <tr>
                     <th>Attraction</th>
@@ -35,7 +35,7 @@
                     <td>Las Vegas</td>
                 </tr>
             </table>
-        </section>
+        </main>
         <footer>
             <p>2026 Vacation Destinations</p>
         </footer>
